...
                android:layout_width="@dimen/search_button_size"
                android:layout_height="@dimen/search_button_size"
                android:contentDescription="@string/search"
                android:src="@android:drawable/ic_menu_search" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/searchText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/search_movie"
                android:maxLines="1">

                <requestFocus />
            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/executeSearch"
                android:layout_width="@dimen/search_button_action_size"
                android:layout_height="wrap_content"
                android:text="@string/ok" />

        </LinearLayout>

...
