<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/moviesList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/toolbar"
    android:background="@color/colorPrimaryDark"
    android:clipToPadding="false"
    android:paddingTop="@dimen/small_margin"
    android:paddingBottom="@dimen/small_margin"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    tools:itemCount="10"
    tools:listitem="@layout/movie_item"
    tools:showIn="@layout/home_activity" />